fix(modal): Add missing border

--- a/src/components/Modal/components/Wrappper/styles.module.scss
+++ b/src/components/Modal/components/Wrappper/styles.module.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   z-index: 100000;
+  border: 1px solid var(--component-modal-border);
 
   @include temporary_mobile {
     border-radius: 0px;
